===================
2018/12/4-5
v 6-0.61

- Added OpcodeStrandStack* activeOpcodeStrandStack to the Engine and had execute() use it.
- Changed Engine::runFunctionObject() to generate its own OpStrandStack so that it would be independent of the execution cycle currently being run by the engine. It is used to set activeOpcodeStrandStack.
- Made it possible for OpStrandContainers to be considered immutable (that is, don't allow destruction of their strands). This enables runFunctionObject() to rerun a function.
- Fixed bug in Engine::runFunctionObject() that failed to pop the stack (variable stack) after it executed code.
- Added enum Result to class ForeignFunc.
- Changed setupForeignFunctionExecution() to account for various values of ForeignFunc::Result.
- Fixed FFIServices::demandArgType() that printed a confusing index value.
- Changed Engine::addOpStrandToStack to use activeOpcodeStrandStack instead of opcodeStrandStack.
- Added xall()
- Changed language version to 3.1.
- Marked EngineMessage::ConditionlessIf as signaling an error.
- Changed FFIServices methods printCustomInfoCode(), printCustomWarningCode(), and printCustomErrorCode() to set the function name for the log message.
- Changed LogMessage::CustomCode() to set the messageId to CustomMessage.

Printer.h
- Changed call() to use ForeignFunc::Result values.
- Added ability to print padding.

InStreamLogger.h
- Added ability to print input line that includes nesting (open brackets).

EngMsgToStr.cpp
- Changed EngineMessage::ConditionlessIf to report an error.


====================
2018/11/4 - 2018/11/6 - 2018/12/3
v 6-0.6

- Changed FFIServices interface to use an array system instead of list. API is different.
- Reduced ForeignFunc to contain only method virtual bool call(FFIServices&).
- Updated ForeignFuncWrapper, CallbackWrapper, and ForeignMethod to follow new FFI.
- Changed EngineMessage::MissingFunctionCallParam to MissingFunctionCallArg.